deployment/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finly-backend-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: backend.finly.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: finly-backend-service
                port:
                  number: 80
